--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
 assets:
    - assets/kw.png
    - assets/ppg.png
+   - assets/kw.jpeg
+   - assets/ppg.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -91,7 +93,7 @@ assets:
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/kw.png
+  image: assets/ppg.jpeg
 #  branding: assets/branding.png
   fullscreen: true
   android_gravity: fill
