--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = ppg_preferred_vendors
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.ppgPreferredVendors
+PRODUCT_BUNDLE_IDENTIFIER = com.vivianaugust.ppgPreferredVendors
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.vivianaugust. All rights reserved.
