--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.0
   firebase_auth: ^5.6.1
+  googleapis: ^10.0.0
+  googleapis_auth: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-   - assets/ppg.png
-   - assets/kw.png
+  assets:
+    - assets/ppg.png
+    - assets/kw.png
+    - assets/ppg-vendors-d80304679d8f.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
