expandable tiles for vendor search and saved vendors with share functionality and url links

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,11 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+  		<string>tel</string>
+  		<string>mailto</string>
+  		<string>https</string>
+	</array>
 </dict>
 </plist>
