--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   googleapis: ^10.0.0
   googleapis_auth: ^1.2.0
   cloud_firestore: ^5.6.10
-
+  share_plus: ^7.2.1
+  url_launcher: ^6.2.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
