organized and debugged

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  mocktail: ^1.0.4
+  firebase_auth_mocks: ^0.14.2
+  fake_cloud_firestore: ^3.1.0 # Replaced cloud_firestore_mocks with this compatible version
+  share_plus_platform_interface: ^3.4.0 # Use the latest compatible version
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
