--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   http: ^0.13.6
   logging: ^1.2.0 
   firebase_crashlytics: ^4.3.8
+  intl: ^0.20.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
