ready for release

--- a/windows/.gitignore
+++ b/windows/.gitignore
@@ -1,5 +1,5 @@
 flutter/ephemeral/
-
+android/app/build/intermediates/flutter/debug/flutter_assets/assets/ppg-vendors-d80304679d8f.json:1
 # Visual Studio user-specific files.
 *.suo
 *.user
