--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   googleapis: ^10.0.0
   googleapis_auth: ^1.2.0
   cloud_firestore: ^5.6.10
-  share_plus: ^7.2.1
+  share_plus: ^12.0.0
   url_launcher: ^6.2.5
   http: ^0.13.6
   logging: ^1.2.0 
@@ -53,7 +53,7 @@ dev_dependencies:
   mocktail: ^1.0.4
   firebase_auth_mocks: ^0.14.2
   fake_cloud_firestore: ^3.1.0 # Replaced cloud_firestore_mocks with this compatible version
-  share_plus_platform_interface: ^3.4.0 # Use the latest compatible version
+  share_plus_platform_interface: ^6.1.0
   integration_test:
     sdk: flutter
   flutter_driver:
